src/components/projects/Project.css
.project-container {
  display: grid;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  grid-gap: 20px;
  justify-items: center;
  margin-bottom: 100px;
}

.card {
  height: 534px;
  color: hsl(210, 24%, 16%);
  -webkit-box-shadow: 0 5px 15px hsla(0, 0%, 0%, 0.5);
  box-shadow: 0 5px 15px hsla(0, 0%, 0%, 0.5);
  -webkit-transition: all 0.2s;
  -webkit-transition: all 0.7s;
  -webkit-transition: all 0.8s;
  transition: all 0.8s;
  overflow: hidden;
  width: 350px;
}
.card img {
  height: 100%;
}
.card:hover .card-content {
  opacity: 1;
  -webkit-transform: translateY(-435px);
  transform: translateY(-435px);
}
.card-content:hover {
  opacity: 1;
  -webkit-transform: translateY(-435px);
  transform: translateY(-435px);
}

.card-text {
  background: hsl(186, 68%, 59%);
  position: relative;
  bottom: 23px;
  display: grid;
  grid-template-rows: repeat(3, auto);
  padding: 10px;
  gap: 10px;
  height: 216px;
}
.card-title {
  color: #1c3041;
  margin: 0;
  font-weight: 800;
  letter-spacing: 0.01em;
  padding-bottom: 6px;
}

.card-content {
  -webkit-transition: 0.3s ease;
  -webkit-transition: all 0.3s ease;
  -webkit-transition: all 0.6s ease;
  transition: all 0.6s ease;
  -webkit-transform: translateY(-343px);
  transform: translateY(-343px);
  width: 100%;
  opacity: 0;
  z-index: 0;
  height: 450px;
}
.card-desc {
  font-size: 12px;
  margin-bottom: 10px;
}
.card-btn {
  width: 144px;
  margin-bottom: 16px;
  border: none;
  cursor: pointer;
  padding: 6px;
  -webkit-transition: all 300ms linear;
  transition: all 300ms linear;
  font-weight: 400;
  border-radius: 6px;
  background: hsl(208 40% 18%);
  color: hsl(40, 23%, 97%);
}

.card-btn:hover {
  color: hsl(208, 40%, 18%);
  background: hsl(40, 23%, 97%);
}

@media only screen and (min-width: 700px) {
  .card:hover .card-content {
    opacity: 1;
    -webkit-transform: translateY(-455px);
    transform: translateY(-455px);
  }
  .card-content:hover {
    opacity: 1;
    -webkit-transform: translateY(-455px);
    transform: translateY(-455px);
  }
}

